# apk_editor_app

./: .gitignore  README.md  flet_build.yml  pyproject.toml  requirements.txt
.github/workflows/: build_android.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/apkeditor/: MainActivity.java
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: file_provider_paths.xml
scripts/: setup.sh
src/: main.py
src/pages/: editor_page.py  home_page.py  invoice_page.py  settings_page.py
src/services/: apk_service.py  asset_manager.py  print_service.py
src/utils/: permissions.py  storage.py
