[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apk-editor"
version = "1.0.0"
description = "أداة لتحليل وتعديل ملفات APK باستخدام Flet"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Ghanem Mahmoud", email = "ghanemmahmoud7581@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Android",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "flet",
    "androguard",
    "Pillow",
    "weasyprint",
]

[project.urls]
Homepage = "https://github.com/ghanemmahmoud7581-hub/apk_editor_app"
Repository = "https://github.com/ghanemmahmoud7581-hub/apk_editor_app"
Issues = "https://github.com/ghanemmahmoud7581-hub/apk_editor_app/issues"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "android",
    "uploads",
    "__pycache__",
    "*.pyc",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "F401",  # unused import
    "E722",  # bare except
    "F541",  # f-string without placeholders
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/utils/permissions.py" = ["F541"]
"src/services/apk_service.py" = ["F401", "E722"]
"src/services/asset_manager.py" = ["F401"]
"src/services/print_service.py" = ["F401"]
"src/utils/storage.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
